# gpu-raytracer

./: .gitignore  CMakeLists.txt  GPURaytracer.sln  GPURaytracer.vcxproj  GPURaytracer.vcxproj.filters  README.md  aabb.h  bvh.h  camera.h  entity.h  entitylist.h  hit_result.h  kernel.cu  light.h  main.cpp  main.cu  material.h  quad.h  raytracer.sln  raytracer.vcxproj  raytracer.vcxproj.filters  shape.h  sphere.h
math/: halton_sampler.h  interval.h  mat4.h  ray.h  stratified_sampler.h  transform.h  util.h  vec2.h  vec3.h
renders/: render_2024-12-22__01-22-20.ppm  render_2024-12-22__01-23-50.ppm  render_2024-12-22__01-37-47.ppm  render_2024-12-22__01-38-52.ppm  render_2024-12-22__02-23-08.ppm  render_2024-12-22__02-41-40.ppm  render_2024-12-22__14-53-32.ppm  render_2024-12-22__17-07-07.ppm  render_2024-12-22__17-52-08.ppm  render_2024-12-22__17-53-23.ppm  render_2024-12-22__18-22-59.ppm  render_2024-12-22__18-49-55.ppm  render_2024-12-22__18-51-04.ppm  render_2024-12-22__18-57-15.ppm  render_2024-12-22__19-05-44.ppm  render_2024-12-22__20-27-20.ppm  render_2024-12-22__20-35-32.ppm  render_2024-12-22__20-36-57.ppm  render_2024-12-22__20-41-30.ppm  render_2024-12-22__20-48-26.ppm  render_2024-12-22__20-57-52.ppm  render_2024-12-22__22-32-39.ppm  render_2024-12-22__22-46-21.ppm  render_2024-12-22__22-47-26.ppm  render_2024-12-22__23-01-16.ppm  render_2024-12-22__23-26-33.ppm  render_2024-12-22__23-29-41.ppm  render_2024-12-22__23-33-37.ppm  render_2024-12-23__00-31-33.ppm  render_2024-12-23__00-33-06.ppm  render_2024-12-23__00-45-06.ppm  render_2024-12-23__00-48-32.ppm  render_2024-12-23__00-53-33.ppm  render_2024-12-23__00-54-24.ppm  (+288 more)
(+1 files in other folders)
